Fixed text-align. comments title, logo-image.

--- a/src/styles/plaseholder.scss
+++ b/src/styles/plaseholder.scss
@@ -23,4 +23,5 @@
   font-weight: 400;
   line-height: 1.38;
   letter-spacing: 0.32px;
+  text-align: justify;
 }
