--- a/src/styles/template-parts-styles/content-events.scss
+++ b/src/styles/template-parts-styles/content-events.scss
@@ -222,6 +222,7 @@
   font-weight: 400;
   line-height: 1.38;
   letter-spacing: 0.32px;
+  text-align: justify;
 
   overflow: hidden;
   text-overflow: ellipsis;
