--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -296,7 +296,7 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    gap: 7px;
+    gap: 30px;
     padding: 40px;
   }
 
@@ -313,6 +313,7 @@
   font-weight: 400;
   line-height: 1.43;
   letter-spacing: 0.25px;
+  text-align: justify;
 
   @media screen and (min-width: $tablet1) {
     text-align: center;
@@ -324,7 +325,7 @@
 
   @media screen and (min-width: $tablet2) {
     width: 528px;
-    text-align: start;
+    text-align: justify;
   }
 
   @media screen and (min-width: $desktop) {
